[gd_scene load_steps=11 format=3 uid="uid://mlc4x5en68sx"]

[ext_resource type="Script" path="res://Scene1/level_1.gd" id="1_xndna"]
[ext_resource type="Texture2D" uid="uid://bf507hiagbopk" path="res://nature_3/empty.png" id="2_j0vai"]
[ext_resource type="Script" path="res://Scene1/CloudLayer2.gd" id="3_pxyr8"]
[ext_resource type="Texture2D" uid="uid://ds5u72fawjaxs" path="res://nature_3/cloud.png" id="3_xrxp5"]
[ext_resource type="PackedScene" uid="uid://cwfemavr1sdfg" path="res://player/skydivePlayer.tscn" id="5_i0aii"]
[ext_resource type="PackedScene" uid="uid://bce5oqsikunf5" path="res://UI/canvas_layer.tscn" id="6_ywsjm"]
[ext_resource type="Texture2D" uid="uid://bnr8pwi7usxvl" path="res://tiles/orb2.png" id="7_0gx3j"]
[ext_resource type="Texture2D" uid="uid://brq6mp1nd1ht7" path="res://tiles/para.png" id="8_gr7ao"]
[ext_resource type="AudioStream" uid="uid://2wy5w6y3qtjv" path="res://music/strong-desert-wind-155416.mp3" id="9_i47sm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4c0rf"]
radius = 27.0

[node name="Level_1" type="Node2D"]
script = ExtResource("1_xndna")
metadata/_edit_vertical_guides_ = [1370.0]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(681.5, 388.5)
scale = Vector2(2.36979, 2.39815)
texture = ExtResource("2_j0vai")

[node name="CloudLayer" type="ParallaxBackground" parent="ParallaxBackground"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground/CloudLayer"]
motion_mirroring = Vector2(0, 760)
script = ExtResource("3_pxyr8")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CloudLayer/ParallaxLayer"]
position = Vector2(683, 389.25)
scale = Vector2(2.375, 2.375)
texture = ExtResource("3_xrxp5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(682, 54)
scale = Vector2(1.5, 1.5)
zoom = Vector2(1.11, 1.11)
limit_left = -3
limit_right = 1370

[node name="SkydivePlayer" parent="." instance=ExtResource("5_i0aii")]
position = Vector2(616, -69)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SkydivePlayer"]
position = Vector2(44, 82)
remote_path = NodePath("../../Camera2D")

[node name="CanvasLayer" parent="SkydivePlayer" instance=ExtResource("6_ywsjm")]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(709, 4074)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(715, 3526)
rotation = -1.10828
scale = Vector2(0.69, 0.69)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.99976, 12)
shape = SubResource("CircleShape2D_4c0rf")

[node name="Sprite2D2" type="Sprite2D" parent="Area2D"]
modulate = Color(0, 0.882353, 1, 1)
position = Vector2(7.17249, 11.0277)
scale = Vector2(0.691015, 0.701103)
texture = ExtResource("7_0gx3j")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(4, 12)
scale = Vector2(0.226923, 0.226923)
texture = ExtResource("8_gr7ao")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_i47sm")
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
